syntax = "proto3";

package record;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_getters_all) = false;

message Genesis {
    option (gogoproto.face) = true;
}

message Child {
    option (gogoproto.face) = true;
    bytes PrevChild = 1 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID",        (gogoproto.nullable) = false];
    bytes Ref       = 2 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
}

message Jet {
    option (gogoproto.face) = true;
    // TODO
}

message Request {
    option (gogoproto.face) = true;
    bytes Object      = 1 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];
    bytes Parcel      = 2;
    bytes MessageHash = 3;
}

message Result {
    option (gogoproto.face) = true;
    bytes Object  = 1 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID",        (gogoproto.nullable) = false];
    bytes Request = 2 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes Payload = 3;
}

message Type {
    option (gogoproto.face) = true;
    bytes Domain          = 1 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes Request         = 2 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes TypeDeclaration = 3;
}

message Code {
    option (gogoproto.face) = true;
    bytes Domain      = 1  [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference",   (gogoproto.nullable) = false];
    bytes Request     = 2  [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference",   (gogoproto.nullable) = false];
    bytes Code        = 3  [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID",          (gogoproto.nullable) = false];
    uint32 MachineType = 4 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.MachineType", (gogoproto.nullable) = false];
}

message Activate {
    option (gogoproto.face) = true;
    bytes  Domain      = 1 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes  Request     = 2 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes  Memory      = 3 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID",        (gogoproto.nullable) = false];
    bytes  Image       = 4 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bool   IsPrototype = 5;
    bytes  Parent      = 6 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bool   IsDelegate  = 7;
}

message Amend {
    option (gogoproto.face) = true;
    bytes  Domain      = 1 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes  Request     = 2 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes  Memory      = 3 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID",        (gogoproto.nullable) = false];
    bytes  Image       = 4 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bool   IsPrototype = 5;
    bytes  PrevState   = 6 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID",        (gogoproto.nullable) = false];
}

message Deactivate {
    option (gogoproto.face) = true;
    bytes  Domain    = 1 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes  Request   = 2 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes  PrevState = 3 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID",        (gogoproto.nullable) = false];
}

message Virtual {
    oneof union {
        Genesis            Genesis            = 101;
        Child              Child              = 102;
        Jet                Jet                = 103;
        Request            Request            = 104;
        Result             Result             = 105;
        Type               Type               = 106;
        Code               Code               = 107;
        Activate           Activate           = 108;
        Amend              Amend              = 109;
        Deactivate         Deactivate         = 110;
    }
    bytes Signature = 200;
}

message Material {
    Virtual Virtual   = 1;
    bytes   JetID     = 2 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.JetID", (gogoproto.nullable) = false];
    bytes   Signature = 200;
}
